--- a/index.rmd
+++ b/index.rmd
@@ -158,9 +158,11 @@ div(html_dom, class = 'project_list')
 </div>
 
 <div id="resumeDiv" class="col-sm-12 col-md-10 col-md-offset-1">
-<iframe src="http://docs.google.com/gview?url=https://www.dropbox.com/s/ixzkmp69nskohtb/Strayer_CV.pdf?dl=1&embedded=true"
+<iframe src="http://docs.google.com/gview?url=https://github.com/nstrayer/cv/raw/master/strayer_cv.pdf&embedded=true"
 style="width:100%; height:700px;" frameborder="0"></iframe>
 </div>
+
+
 
 ```{js}
 function open_hide_cv(){
