--- a/index.rmd
+++ b/index.rmd
@@ -151,35 +151,21 @@ div(html_dom, class = 'project_list')
 
 
 
-## CV
-
-<div id="resumeButton" class="col-sm-12 col-md-10 col-md-offset-1" style="margin-left:0; width: 100%;">
-<h4 id="buttonText">Expand C.V.</h4>
-</div>
-
-<div id="resumeDiv" class="col-sm-12 col-md-10 col-md-offset-1">
-<iframe src="http://docs.google.com/gview?url=https://github.com/nstrayer/cv/raw/master/strayer_cv.pdf&embedded=true" style="width:100%; height:700px;" frameborder="0"></iframe>
-</div>
-
-<br>
-
-View HTML version of CV with links [here](nickstrayer.me/cv).
+## CV/Resume
 
 
-```{js}
-function open_hide_cv(){
-  let link = $('#buttonText');
-  $('#resumeDiv').slideToggle('slow', function() {
-    if ($(this).is(':visible')) {
-      link.text('Close');
-    } else {
-      link.text('Expand C.V.');
-    }
-  });
-}
-$('#resumeButton').click(open_hide_cv);
-open_hide_cv();
-```
+Want a longer list of the stuff I've done related to my career? I have a __CV__!
+
+- [HTML version of CV with clickable links](http://nickstrayer.me/cv)
+- [PDF version for printing](https://github.com/nstrayer/cv/raw/master/strayer_cv.pdf)
+
+
+Need a short and to-the-point single page annotation of my data-science career? Try my __resume__!
+
+- [HTML](http://nickstrayer.me/cv/resume.html)
+- [PDF](https://github.com/nstrayer/cv/raw/master/strayer_resume.pdf)
+
+Interested in how I made these? Check out the repo: [github.com/nstrayer/cv](https://github.com/nstrayer/cv)
 
 
 ## Contact
