--- a/index.rmd
+++ b/index.rmd
@@ -1,5 +1,5 @@
 ---
-title: "Nick Strayer"
+title: "Nick Strayer | Visual Data Scientist"
 output:
   html_document:
     css: styles.css
@@ -84,18 +84,19 @@ r2d3::r2d3(
 
 ## About
 
+_I am currently looking for positions for after I graduate (~Sep 2020). Get in touch if you're looking for a visual data scientist!_
 
 I have been extremely lucky to work in many different realms, including as a [Journalist at the New York Times](http://www.nytimes.com/interactive/2016/08/26/us/college-student-migration.html), data scientist at the [Johns Hopkins Data Science Lab](http://jhudatascience.org/) and [Dealer.com](http://www.dealer.com/) in Vermont, and "data artist in residence" at startup [Conduce](https://www.conduce.com/) in California. 
 
 Currently, I am a PhD candidate in biostatistics at Vanderbilt University. I received my undergraduate degree from the University of Vermont where I majored in __mathematics__ and __statistics__ and minored in __computer science.__
 
-My research focuses on __unsupervized and semi-supervized methods__ for exploring large omics datasets, with a heavy focus on __visualization__. 
+My research focuses on __network analysis and visualization__ for exploring large omics datasets.
 
-I like data. Manipulating it, modeling it, making it (simulation), visualizing it and yes, even cleaning it. I do these things with some combination of __R__, __Python__, and __Javascript__ (d3.js in particular). Most recently I have been fascinated with conveying complex statistical topics and methods using [intuitive](http://nickstrayer.me/binomialFun/confidenceIntervals) and [interactive](http://nickstrayer.me/likelihood) [graphics.](http://nickstrayer.me/binomialFun/)
+I like data. Manipulating it, modeling it, making it (simulation), visualizing it and yes, even cleaning it. I do these things with some combination of __R__, __Python__, and __Javascript__ (d3.js in particular). 
 
 If you want to read about me and my pursuits in a more eloquently written form, I was recently [profiled](https://www.uvm.edu/uvmnews/news/deeper-story-data) by my alma mater.
 
-When I am not in "school mode" I love to bike places, read science fiction, take photos, and wander around gardens/musuems.
+When I am not in "school mode" I love to bike places, read science fiction, take photos of birds, and wander around gardens/museums.
 
 
 Have a fantastic day!
