--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,8 @@
 ---
 title: "Nick Strayer | Visual Data Scientist"
-output:
-  html_document:
+format:
+  html:
+    theme: cosmo
     css: styles.css
     toc: true
     toc_depth: 2
@@ -18,7 +19,7 @@ library(googlesheets4)
 library(r2d3)
 
 # Public website, public sheet
-googlesheets4::sheets_deauth()
+googlesheets4::gs4_deauth()
 projects_data <- read_sheet("https://docs.google.com/spreadsheets/d/1i4PobTTNsYJptE9KvMCiYq4oWEZ99WADJWqXVk4zDhE/edit?usp=sharing")
 
 image <- png::readPNG('images/website_header.png') %>% 
@@ -84,11 +85,9 @@ r2d3::r2d3(
 
 ## About
 
-I am a software engineer building open-source software on the Shiny team at RStudio. In addition to being a software engineer, I have been extremely lucky to work in many different realms, including as a [Journalist at the New York Times](http://www.nytimes.com/interactive/2016/08/26/us/college-student-migration.html), data scientist at the [Johns Hopkins Data Science Lab](http://jhudatascience.org/) and [Dealer.com](http://www.dealer.com/) in Vermont, and "data artist in residence" at startup [Conduce](https://www.conduce.com/) in California. 
+I am a senior software engineer at [Posit](https://posit.co/) building tools to help data scientists work better. In addition to being a software engineer, I have been extremely lucky to work in many different realms, including as a [Journalist at the New York Times](http://www.nytimes.com/interactive/2016/08/26/us/college-student-migration.html), data scientist at the [Johns Hopkins Data Science Lab](http://jhudatascience.org/) and [Dealer.com](http://www.dealer.com/) in Vermont, and "data artist in residence" at startup [Conduce](https://www.conduce.com/) in California. 
 
-I recently finished my PhD in biostatistics at Vanderbilt University and before that I got my undergraduate degree from the University of Vermont where I majored in __mathematics__ and __statistics__ and minored in __computer science.__
-
-I like data. Manipulating it, modeling it, making it (simulation), visualizing it and yes, even cleaning it. I do these things with some combination of __R__, __Python__, and __Javascript.__
+I have a PhD in biostatistics from Vanderbilt University and an undergraduate degree from the University of Vermont where I majored in __mathematics__ and __statistics__ and minored in __computer science.__
 
 When I am not in "work mode" I love to bike places, read science fiction, take photos of birds, and wander around gardens/museums.
 
@@ -148,62 +147,65 @@ projects_gathered %>%
 ## CV/Resume
 
 ```{r, cache = TRUE, include = FALSE}
-# Read in all data and initialize a CV printer object
-cv_printer <- datadrivencv::CV_Printer$new(
-  data_location = "https://docs.google.com/spreadsheets/d/14MQICF2F8-vf8CKPF1m4lyGKO6_thG-4aSwat1e2TWc",
-  pdf_location = "https://github.com/nstrayer/cv/raw/master/strayer_cv.pdf",
-  html_location = "nickstrayer.me/cv/")
+source('cv_printing_functions.r')
 
-positions <- cv_printer$position_data %>% 
-  mutate(
-    id = row_number(),
+# Read in all data and initialize a CV printer object
+CV <- create_CV_object(
+  data_location = "https://docs.google.com/spreadsheets/d/14MQICF2F8-vf8CKPF1m4lyGKO6_thG-4aSwat1e2TWc",  
+)
+
+position_data <- CV$entries_data
+
+positions <- position_data |>
+  dplyr::mutate(
+    id = dplyr::row_number(),
     title = stringr::str_remove_all(title, '(\\(.+?\\))|(\\[)|(\\])'),
-    section = stringr::str_replace_all(section, "_", " ") %>% stringr::str_to_title()
+    section = stringr::str_replace_all(section, "_", " ") |> stringr::str_to_title()
   )
 
 combination_indices <- function(n){
   rep_counts <- (n:1) - 1
-  tibble(
+  dplyr::tibble(
     a = rep(1:n, times = rep_counts),
     b = purrr::flatten_int( purrr::map(rep_counts, ~{tail(1:n, .x)}) )
   )
 }
-
-edges <- positions %>% 
-  select(id, start, end) %>% 
-  mutate(
-    end = ifelse(end == "Current", lubridate::year(lubridate::ymd(Sys.Date())), end),
-    start = ifelse(start == "N/A", end, start)
-  ) %>% 
-  purrr::pmap_dfr(function(id, start, end){
-    tibble(
-      year = start:end,
+current_year <- lubridate::year(lubridate::ymd(Sys.Date()))
+edges <- positions |>
+  dplyr::select(id, start_year, end_year) |>
+  dplyr::mutate(
+    end_year = ifelse(end_year > current_year, current_year, end_year),
+    start_year = ifelse(start_year > current_year, current_year, start_year)
+  ) |>
+  purrr::pmap_dfr(function(id, start_year, end_year){
+    dplyr::tibble(
+      year = start_year:end_year,
       id = id
     )
-  }) %>% 
-  group_by(year) %>% 
-  nest() %>% 
-  dplyr::rename(ids_for_year = data) %>% 
+  }) |>
+  dplyr::group_by(year) |>
+  tidyr::nest() |>
+  dplyr::rename(ids_for_year = data) |>
   purrr::pmap_dfr(function(year, ids_for_year){
-    combination_indices(nrow(ids_for_year)) %>% 
-      transmute(
+    combination_indices(nrow(ids_for_year)) |>
+      dplyr::transmute(
         year = year,
         source = ids_for_year$id[a],
         target = ids_for_year$id[b]
       )
   })
+
+network_data <- list(nodes = dplyr::select(positions, -in_resume,-timeline),
+                      edges = edges) |>
+  jsonlite::toJSON()
+
 ```
 
-```{r}
-
-r2d3::r2d3(system.file("js/cv_network.js", package = "datadrivencv"),
-           data = list(
-            nodes = positions %>% select(-in_resume, -end_num, -timeline),
-            edges = edges
-          ),
-           width = "100%",
-           height = "300px",
-           elementId = "cv_network")
+```{r cv_network}
+r2d3::r2d3(
+  data = network_data, 
+  width = "100%",
+  script = "javascript/cv_network.js")
 ```
 
 
